<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memorise</string>
    <string name="signupText">Sign up</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="usernameText">Username</string>
    <string name="connectionText">Connection</string>
    <string name="playText">Play</string>
    <string name="leaderboardText">Leaderboard</string>
    <string name="difficultyText">Difficulty</string>
    <string name="easyText">Easy</string>
    <string name="hardText">Hard</string>
    <string name="expertText">Expert</string>
    <string name="timerText">Timer</string>
    <string name="levelText">"Level : %d "</string>
    <string name="pointsText">"Points : %.1f "</string>
    <string name="exitDialog">Are you sure to quit ?</string>
    <string name="timerValueText">Timer : %1$tS.%1$tL</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="playAgain">Do you want to play again ?</string>
    <string name="yourTurn">Your turn !</string>
    <string name="cpuPlaying">CPU is playing !</string>
    <string name="disconnect">Disconnect</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="usernameValue">Username: %s</string>
    <string name="scoreValue">Score: %.2f points</string>
    <string name="connectionErrDB">Database connection error !</string>
    <string name="idText">ID</string>
    <string name="scoreText">Score</string>
    <string name="timeOut">Timeout!</string>
    <string name="rankValue">Rank : %d</string>
    <string name="errorSignup">Error when signing up!</string>
    <string name="wrongSigning">Wrong password or email !</string>
    <string name="signinError">Sign in error !</string>
    <string name="timerFinish">Timer</string>
    <string name="rules">
        Rules of Memorise\n\nThe goal of this game is to memorise the sequence of the CPU
        You need to pass at least a level in order to win points\n
        The points are calculated in the following:\n
        Example: (Level x Base)\n
        Easy Mode: Level x 1\n
        Hard Mode: Level x 1.5\n
        Expert Mode: Level x 3\n
        Timer Mode: Level x 2\n
    </string>
</resources>