<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/splashscreenBackgroundColor">

    <soup.neumorphism.NeumorphImageView

        android:id="@+id/neumorphImageView"
        android:layout_width="500dp"
        android:layout_height="64dp"
        android:layout_marginEnd="124dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView"
        style="?attr/textViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/next_art_bold"
        android:text="@string/difficultyText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/neumorphImageView"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.083" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/death_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">


        <soup.neumorphism.NeumorphButton
            android:id="@+id/easyButton"
            style="?attr/buttonStyle"
            android:textColor="@color/easyColor"
            android:minWidth="200dp"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/easyText"/>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/hardButton"
            style="?attr/buttonStyle"
            android:textColor="@color/hardColor"
            android:minWidth="200dp"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/hardText"/>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/expertButton"
            style="?attr/buttonStyle"
            android:textColor="@color/expertColor"
            android:minWidth="200dp"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/expertText"/>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/timerButton"
            style="?attr/buttonStyle"
            android:textColor="@color/timerColor"
            android:minWidth="200dp"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/timerText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_menu"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:srcCompat="@drawable/neumorphic_light_logo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:srcCompat="@drawable/memorise_second_logo" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>