<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/splashscreenBackgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <soup.neumorphism.NeumorphCardView
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:neumorph_backgroundColor="?attr/inverseColorSecond">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/id_user_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/idText"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textViewStyle"
                    android:textColor="?attr/inverseColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/username_user_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/usernameText"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textViewStyle"
                    android:textColor="?attr/inverseColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/score_user_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/scoreText"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textViewStyle"
                    android:textColor="?attr/inverseColor"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leaderboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp" />

        </LinearLayout>

    </soup.neumorphism.NeumorphCardView>
    <ProgressBar
        android:id="@+id/loading_leaderboard"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#40000000"
        android:padding="128dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>