<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/splashscreenBackgroundColor">

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/pointsCardView"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:neumorph_backgroundColor="@android:color/white">

        <TextView
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical|end"
            android:text="@string/pointsText"
            android:textAlignment="textEnd"
            android:textAppearance="?attr/textViewStyleInGame"
            android:textSize="20sp"
            android:textStyle="italic" />
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/levelCardView"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_backgroundColor="@android:color/white">

        <TextView
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical|end"
            android:text="@string/levelText"
            android:textAlignment="textEnd"
            android:textAppearance="?attr/textViewStyleInGame"
            android:textSize="20sp"
            android:textStyle="italic" />
    </soup.neumorphism.NeumorphCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.73" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/live1"
            style="@style/Widget.Neumorph.ImageView"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:background="@drawable/live" />

        <ImageView
            android:id="@+id/live2"
            style="@style/Widget.Neumorph.ImageView"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:background="@drawable/live" />

        <ImageView
            android:id="@+id/live3"
            style="@style/Widget.Neumorph.ImageView"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:background="@drawable/live"

            />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/blocksLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:columnCount="5"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:rowCount="2" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerValueText"
        android:textAppearance="?attr/textViewStyle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

</androidx.constraintlayout.widget.ConstraintLayout>